# CPPStringFormatting

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  PerformanceTests.md  README.md  generate_projects.bat  reset_submodules.bat  test_compiler_compatible.bat
Benchmark/: CMakeLists.txt
Benchmark/Sources/: BenchmarkMain.cpp
CMake/: CMakeCommon.cmake
Format/: Format.hpp  StandardLibraryAdapter.hpp
Format/Common/: Algorithm.hpp  AutoArray.hpp  AutoString.hpp  Build.hpp  CharTraits.hpp  Macros.hpp  Mpl.hpp  Mutex.hpp  Noncopyable.hpp
Format/Details/: Algorithm.hpp  AutoArray.hpp  AutoString.hpp  Build.hpp  FormatTo.hpp  LookupPattern.hpp  Noncopyable.hpp  Pattern.hpp  PatternParser.hpp  PatternStorage.hpp  Preprocessor.hpp  Shims.hpp  StringConvertAlgorithm.hpp  System.hpp  Traits.hpp  Translator.hpp  Translators.hpp  Types.hpp  Utility.hpp
Format/Details/BreforeCPP11Inlines/: FormatToInner.hpp
Format/Details/InlineFiles/: FormatTo.inl
Format/Details/StandardLibrary/: FormatTo.hpp  StandardLibraryPolicy.hpp  StandardPatternPolicy.hpp
Format/Format/: Algorithm.hpp  Build.hpp  FormatTo.hpp  FormatToInner.hpp  FormatToSTL.hpp  LookupPattern.hpp  Pattern.hpp  PatternParser.hpp  Preprocessor.hpp  ProgressTimer.hpp  StandardPatternPolicy.hpp  System.hpp  Traits.hpp  Translator.hpp  Types.hpp  Utility.hpp
Integration/UnrealEngine3/: UnFormat.h  UnFormatPost.h  readme.txt
PerformanceTests/: CMakeLists.txt
PerformanceTests/Sources/: PerformanceTestsMain.cpp
Test/: Format.sln  Format.vcxproj  Format.vcxproj.filters  Test.cbp  Test.cpp  Test.depend  Test.layout
Test/Test.xcodeproj/: project.pbxproj
Test/Test.xcodeproj/project.xcworkspace/xcshareddata/: Test.xccheckout
Test/Test.xcodeproj/project.xcworkspace/xcuserdata/bodong.xcuserdatad/: UserInterfaceState.xcuserstate
Test/Test.xcodeproj/xcuserdata/bodong.xcuserdatad/xcschemes/: Test.xcscheme  xcschememanagement.plist
UnitTests/: CMakeLists.txt
UnitTests/Headers/: MFCAdapter.hpp
UnitTests/Sources/: MFCAdapter.hpp  UnitTests_Algorithm.cpp  UnitTests_Common.cpp  UnitTests_Extends.cpp  UnitTests_Format.cpp  UnitTests_IdentifyCompiler.cpp  UnitTests_MFC.cpp
